# JScaner

./: 3dscaning.code-workspace  CAMERA_SELECTION_TROUBLESHOOTING.md  CHANGELOG.md  CHOOSE_YOUR_VERSION.md  CUDA_INSTALLATION_SUMMARY.md  DEPLOYMENT_PACKAGE_COMPLETE.md  DEPLOYMENT_SUMMARY.md  FILES_CREATED_COMPLETE_LIST.md  FINAL_DELIVERY_CHECKLIST.md  GITHUB_RELEASE_NOTES_v2.1.md  GUI_DEPLOYMENT_GUIDE.md  GUI_VERSION_SUMMARY.md  GUI_VISUAL_REFERENCE.md  INDEX_DOCUMENTATION.md  KINECT_INTEGRATION_BRANCH_INFO.md  KINECT_INTEGRATION_COMPLETE.md  KINECT_INTEGRATION_STATUS.md  KINECT_NOT_DETECTED.md  KINECT_SCANNER_DOCUMENTATION_INDEX.md  KINECT_SCANNER_GUI_GUIDE.md  KINECT_SCANNER_GUI_QUICK_START.md  KINECT_SCANNER_PROGRAM_SUMMARY.md  KINECT_SCANNER_SETUP_CHECKLIST.md  KINECT_SETUP.md  KINECT_V1_IMPLEMENTATION.md  KINECT_V1_INTEGRATION_STATUS.md  KINECT_V1_LIBUSBK_TROUBLESHOOTING.md  KINECT_V1_QUICK_START.md  LICENSE  MULTI_CAMERA_GUIDE.md  MULTI_CAMERA_QUICK_REF.md  MULTI_CAMERA_UPDATE.md  PROCESSING_MODE_GUIDE.md  PROJECT_COMPLETE_SUMMARY.md  PROJECT_DOCUMENTATION.md  PROJECT_SUMMARY.md  QUICK_START_KINECT_SCANNER.md  README.md  README_v2.2.md  RECONSTRUCTION_SUCCESS.md  (+32 more)
.github/: copilot-instructions.md
captured/: scan_20251229_152624_001_metadata.json  scan_20251229_152627_002_metadata.json  scan_20251229_152632_003_metadata.json  scan_20251229_152634_004_metadata.json  scan_20251229_152643_005_metadata.json  scan_20251229_152646_006_metadata.json  scan_20251229_152649_007_metadata.json  scan_20251229_152652_008_metadata.json  scan_20251229_152655_009_metadata.json  scan_20251229_152657_010_metadata.json  scan_20251229_152658_011_metadata.json  scan_20251229_152658_012_metadata.json  (+53 more)
(+31 files in other folders)
