[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "jscaner"
version = "1.0.0"
description = "3D object reconstruction from photographs with reference grid calibration"
authors = [
    {name = "JScaner Project", email = "contact@jscaner.example"}
]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
keywords = ["3d-scanning", "photogrammetry", "computer-vision", "stl", "opencv"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent", 
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Multimedia :: Graphics :: 3D Modeling",
    "Topic :: Scientific/Engineering :: Image Processing"
]
dependencies = [
    "opencv-python>=4.8.0",
    "numpy>=1.24.0",
    "open3d>=0.17.0",
    "matplotlib>=3.7.0",
    "Pillow>=10.0.0",
    "scipy>=1.11.0",
    "scikit-image>=0.21.0",
    "trimesh>=4.0.0",
    "pymeshlab>=2023.12",
    "tqdm>=4.65.0"
]

[project.urls]
Homepage = "https://github.com/example/jscaner"
Repository = "https://github.com/example/jscaner"
Documentation = "https://github.com/example/jscaner/wiki"
"Bug Tracker" = "https://github.com/example/jscaner/issues"

[project.scripts]
jscaner = "main:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"